src/objects/ACCA_Service_Request__c.object
<CustomObject>
    <fields>
        <fullName>End_Date_1__c</fullName>
        <label>End Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_2__c</fullName>
        <label>End Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_CC_Acquirer__c</fullName>
        <label>End Date (CC Acquirer)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date_CC_Type__c</fullName>
        <label>End Date (CC Type)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>B - Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D - Daily</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GDS_Ret_Error_Report__c</fullName>
        <label>GDS Ret Error Report?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GDS__c</fullName>
        <label>GDS</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Rate_1__c</fullName>
        <inlineHelpText>This is a percentage field with 2 decimals. Please enter percentage as for example 7, or 7.5.</inlineHelpText>
        <label>International Rate 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>International_Rate_2__c</fullName>
        <inlineHelpText>This is a percentage field with 2 decimals. Please enter percentage as for example 7, or 7.5.</inlineHelpText>
        <label>International Rate 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Max_Rate_1__c</fullName>
        <label>Max Rate 1</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Rate_2__c</fullName>
        <label>Max Rate 2</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Max_Rate_3__c</fullName>
        <label>Max Rate 3</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Merchant_Agreement_Number_2__c</fullName>
        <label>Merchant Agreement Number 2</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Agreement_Number_3__c</fullName>
        <label>Merchant Agreement Number 3</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Agreement_Number_4__c</fullName>
        <label>Merchant Agreement Number 4</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Merchant_Agreement__c</fullName>
        <label>Merchant Agreement</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Address__c</fullName>
        <label>Operational Address</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Contact__c</fullName>
        <label>Operational Contact</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operational_Email__c</fullName>
        <label>Operational Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Operational_Phone__c</fullName>
        <label>Operational Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Output_ID__c</fullName>
        <label>Output ID</label>
        <picklist>
            <picklistValues>
                <fullName>ACSIFILE - Airline Credit Sales Invoicing (Complete)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENTHOT - Agent HOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGSSTP - Agent STP Summary ASCII File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGTGPHOT - Agent Group HOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGTSTP - Agent STP Detail ASCII File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIRDATA - Airline Itinerary Data by Period Month or Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIRLINEHOT - Airline Billing HOT Output</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIRWEBHOT - Airline HOT for Web Based Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALBSTP - Airline STP Detail ASCII File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ALSSTP - Airline STP Summary ASCII File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASAGSTAT - Agent Group STAT File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASAICOMP - ASCII Comparative Statistics (Gross &amp; Net) Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASAISTAT - Airline STAT ASCII File (Domestic Only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASAISTMH - Create Airline Monthly Statistics ASCII File</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSAGSA	 - Agent Sales Analysis File for BSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSLKAG	- Agent Master file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSLKAI - BSPLink Master File for Airline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSLKCP	 - BSPLink Master File for CIP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSLKCY - BSPLink Master File for Currency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSLKDT - BSPLink Master File for Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSLKIN - BSPLink Master File for Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSLKMV	 - BSPLink Master File for Movements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSLKPD	 - BSPLink Master File for Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSLKRD - BSPLink Master File for Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSLKRI - BSPLink Master File for RPSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSLKRN - BSPLink Master File for Rejections</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSLKSS	 - BSPLink Master File for Series</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSLKTP	 - BSPLink Master File for TSP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSPALM	 - Airline Agent PALMS file</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASBSPSE1 - BSP Settlement File 1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Package_ID__c</fullName>
        <label>Package ID</label>
        <picklist>
            <picklistValues>
                <fullName>AGENT Agent 0000 BSP Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent 0000 BSP Credit Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent 0000 BSP Remittance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent 0000 BSP Statistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Adjustment Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent ASCII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent ASCII Files</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent ASCII STP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Billing Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Billing ASCII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Billing Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Billing Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Billing Summary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Daily Credit Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Daily RET Error Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent End Fin Year Stats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent EOY Statistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent EOY Stats</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Error Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent ET Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Group HOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Group Remittance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Grp 1920060 Statistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Grp 1927021 Statistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent HOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Inventory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Monthly Statistics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGENT Agent Net Error Report</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Prefix_From_2__c</fullName>
        <label>Prefix From 2</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prefix_From_3__c</fullName>
        <label>Prefix From 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quotation_CNY__c</fullName>
        <label>Quotation (CNY)</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_By__c</fullName>
        <inlineHelpText>ACCA to enter the name of the person who provided the quote.</inlineHelpText>
        <label>Quoted By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_1__c</fullName>
        <inlineHelpText>This is a percentage field with 2 decimals. Please enter percentage as for example 7, or 7.5.</inlineHelpText>
        <label>Rate 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_2__c</fullName>
        <inlineHelpText>This is a percentage field with 2 decimals. Please enter percentage as for example 7, or 7.5.</inlineHelpText>
        <label>Rate 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rate_3__c</fullName>
        <inlineHelpText>This is a percentage field with 2 decimals. Please enter percentage as for example 7, or 7.5.</inlineHelpText>
        <label>Rate 3</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Receipent_Type__c</fullName>
        <label>Recipient Type</label>
        <picklist>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Airline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bank</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSP Airline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BSPlink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC Acquirer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IATA ICCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PALMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other, pls specify</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recipient_ID__c</fullName>
        <inlineHelpText>Enter the BSP Code, Agent Code, Airline Numeric Code, CCA Code, or specify Other.</inlineHelpText>
        <label>Recipient ID</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Format__c</fullName>
        <label>Report Format</label>
        <picklist>
            <picklistValues>
                <fullName>ASCII</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>XLS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PDF</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>SQL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TXT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_By_text__c</fullName>
        <description>Used to update field with the case owner.</description>
        <label>Requested By</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ACCA_Service_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_1__c</fullName>
        <label>Start 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_2__c</fullName>
        <label>Start 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_3__c</fullName>
        <label>Start 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_1__c</fullName>
        <label>Start Date 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_2__c</fullName>
        <label>Start Date 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_CC_Acquirer__c</fullName>
        <label>Start Date (CC Acquirer)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_CC_Type__c</fullName>
        <label>Start Date (CC Type)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Technical_Address__c</fullName>
        <label>Technical Address</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Contact__c</fullName>
        <label>Technical Contact</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Email__c</fullName>
        <label>Technical Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Technical_Phone__c</fullName>
        <label>Technical Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Test_file_submitted_by__c</fullName>
        <label>Test file submitted by</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_file_submitted_via__c</fullName>
        <label>Test file submitted via</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_purpose__c</fullName>
        <description>Description of test purpose for Test Form</description>
        <label>Test purpose</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Third_Party__c</fullName>
        <label>Third Party</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>To_1__c</fullName>
        <label>To 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_2__c</fullName>
        <label>To 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>To_3__c</fullName>
        <label>To 3</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Code_1__c</fullName>
        <label>Transaction Code 1</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TKTT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transaction_Code_2__c</fullName>
        <label>Transaction Code 2</label>
        <picklist>
            <picklistValues>
                <fullName>ALL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ACNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CANX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMDA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV30</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV40</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MV51</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFNC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TKTT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Transmission_Method__c</fullName>
        <label>Transmission Method</label>
        <picklist>
            <picklistValues>
                <fullName>iiNET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFTP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_c__c</fullName>
        <label>Other (if not in picklist)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prefix_from_1__c</fullName>
        <label>Prefix From 1</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>ACCA Service Request</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Form-{0000}</displayFormat>
        <label>Form Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ACCA Service Requests</pluralLabel>
    <recordTypes>
        <fullName>Agent_Group_Maintenance</fullName>
        <active>true</active>
        <label>Agent Group Maintenance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Airline_Commission</fullName>
        <active>true</active>
        <label>Airline Commission</label>
    </recordTypes>
    <recordTypes>
        <fullName>Airline_Merchant_Agreement</fullName>
        <active>true</active>
        <description>Form for Airline Merchant Agreement</description>
        <label>Airline Merchant Agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Create_or_Delete_Agent_Group</fullName>
        <active>true</active>
        <label>Create or Delete Agent Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Card_Acquirer</fullName>
        <active>true</active>
        <description>Form for Credit Card Acquirer</description>
        <label>Credit Card Acquirer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Credit_Card_Type</fullName>
        <active>true</active>
        <description>Form for Credit Card Type</description>
        <label>Credit Card Type</label>
    </recordTypes>
    <recordTypes>
        <fullName>Historical_Output</fullName>
        <active>true</active>
        <label>Historical Output</label>
    </recordTypes>
    <recordTypes>
        <fullName>OCC_Output_Distribution</fullName>
        <active>true</active>
        <label>OCC Output Distribution</label>
    </recordTypes>
    <recordTypes>
        <fullName>OCC_Package_Maintenance</fullName>
        <active>true</active>
        <label>OCC Package Maintenance</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>